added the user Info

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "framer-motion": "^2.7.7",
+    "jwt-decode": "^3.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-autosuggest": "^10.0.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
