--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "qv-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000/",
   "dependencies": {
     "@sweetalert/with-react": "^0.1.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -23,6 +24,7 @@
     "redux-devtools-extension": "^2.13.8",
     "sweetalert": "^2.1.2",
     "yup": "^0.29.3"
+    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,4 +47,5 @@
       "last 1 safari version"
     ]
   }
+  
 }
